Commit modifs selectors, fonctions, de l'app.

--- a/quarto/presentation.html
+++ b/quarto/presentation.html
@@ -716,6 +716,7 @@
 │       ├───⚙app
 │       │   ├───🐍st_functions.py
 │       │   ├───🐍st_plots.py
+│       │   ├───🐍st_selectors.py
 │       │   ├───🐍st_tables.py
 │       │   └───🐍streamlit_app.py
 │       ├───⚙ml_models
