Commit ajout dernière page

--- a/quarto/presentation.html
+++ b/quarto/presentation.html
@@ -1027,10 +1027,13 @@ style F stroke:#fff100,stroke-width:3px, fill:white;
           display:block!important;
       }</style></aside>
 </section>
+<section id="le-conteneur-en-action" class="slide level2 smaller">
+<h2>🏗️ Le conteneur en action !</h2>
+</section>
 <section id="fin" class="slide level2 smaller" data-background-image="img\weird_man.png" data-background-opacity="0.25">
 <h2>Fin</h2>
 <blockquote>
-<p>Bon alors, y’a t’y qu’on l’goûte quand ce vin ?</p>
+<p>−··· −−− −· ·− ·−·· −−− ·−· ··· −−··−− −·−− ·−−−−· ·− − ·−−−−· −·−− −−·− ··− ·−−−−· −−− −· ·−·· ·−−−−· −−· −−− ··− − · −−·− ··− ·− −· −·· −·−· · ···− ·· −· ··−−··</p>
 </blockquote>
 </section>
 <section id="références" class="slide level2">
