Commit docker (image)

--- a/quarto/presentation.html
+++ b/quarto/presentation.html
@@ -1232,7 +1232,7 @@ style F stroke:#fff100,stroke-width:3px, fill:white;
           display:block!important;
       }</style></aside>
 </section>
-<section id="le-conteneur-en-action" class="slide level2 smaller">
+<section id="le-conteneur-en-action" class="slide level2 smaller" data-background-image="img\img_docker.webp" data-background-opacity="0.35">
 <h2>🏗️ Le conteneur en action !</h2>
 <p>Il faut tout d’abord s’assurer d’avoir téléchargé <strong>Docker Desktop</strong> avant toute chose.</p>
 <p>Une fois installé, l’image est construite en exécutant la commande suivante dans un terminal :</p>
