--- a/quarto/presentation.html
+++ b/quarto/presentation.html
@@ -832,7 +832,7 @@
           display:block!important;
       }</style></aside>
 </section>
-<section id="choix-du-stockage-partie-ii" class="slide level2 smaller">
+<section id="choix-du-stockage-partie-ii" class="slide level2 smaller" data-background-image="img\homme_en_couple.jpeg" data-background-opacity="0.25">
 <h2>Choix du stockage, Partie II</h2>
 <ul>
 <li>5 tables de résultats de Machine Learning sont obtenues grâce à l’exécution de <code>ml_trigger</code> qui se charge d’éxécuter l’ensemble des scripts d’export.</li>
@@ -876,7 +876,7 @@ style F stroke:#fff100,stroke-width:3px, fill:white;
           display:block!important;
       }</style></aside>
 </section>
-<section id="démonstration" class="slide level2">
+<section id="démonstration" class="slide level2" data-background-image="img\fusee.jpeg" data-background-opacity="0.25">
 <h2>🚀 Démonstration</h2>
 <p><strong>Lancement de l’application, 2 Méthodes.</strong></p>
 <div class="callout callout-note callout-titled callout-style-default">
@@ -1259,7 +1259,7 @@ style F stroke:#fff100,stroke-width:3px, fill:white;
           display:block!important;
       }</style></aside>
 </section>
-<section id="fin" class="slide level2 smaller" data-background-image="img\weird_man.png" data-background-opacity="0.25">
+<section id="fin" class="slide level2 smaller" data-background-image="img\findumonde.jpeg" data-background-opacity="0.25">
 <h2>Fin</h2>
 <blockquote>
 <p>On ne sait pas pourquoi on a fait tout ça, car nous voulions simplement trouver une bouteille pour fêter notre anniversaire, et on se retrouve avec une application d’analyse de données qui ne nous aide en aucun cas à trouver notre breuvage…😵</p>
