Commit Quarto Final

--- a/quarto/presentation.html
+++ b/quarto/presentation.html
@@ -394,9 +394,9 @@
   <div class="reveal">
     <div class="slides">
 
-<section id="title-slide" class="quarto-title-block center">
+<section id="title-slide" data-background-image="img/background_wine.jpg" data-background-opacity="0.5" data-notes="Ce projet de Machine Learning est l’aboutissement de plus de 3 mois de travail sur un sujet éminemment important à nos yeux : le vin. Il y a de cela plus de 2 millénaires, <strong>Aristote</strong> éclairait déjà l’antiquité avec sa philosophie en énonçant : <strong>L’art et le vin sont les joies supérieures des hommes libres.</strong> Une citation qui, il faut le dire, a résonné en nous. Mais pourquoi en sommes-nous arrivé là <em>Guillaume</em> ?" class="quarto-title-block center">
   <h1 class="title">🍷 À boire 🍻</h1>
-  <p class="subtitle"><em>Le breuvage contre-attaque</em></p>
+  <p class="subtitle"><em>Wine Scraping : Le breuvage contre-attaque</em></p>
 
 <div class="quarto-title-authors">
 <div class="quarto-title-author">
@@ -935,15 +935,17 @@ style F stroke:#fff100,stroke-width:3px, fill:white;
 <li>Docstrings explicites et soignées</li>
 <li>Gestion des dépendances avec Poetry</li>
 <li>Modularité</li>
-<li>Tests des features de l’application</li>
 <li>Docker</li>
+<li>Tests des features de l’application</li>
+<li>Git</li>
+<li>Black</li>
 </ul>
 <p><strong>Code certifié conforme par l’<em>Agent Smith<span class="math inline">\(^*\)</span></em></strong></p>
 <p><span class="math inline">\(^*\)</span> <em>L’Agent Smith tient par ailleurs à préciser qu’il n’a reçu aucun pot-de-vin de notre part pour ce diagnostic malgré son enrichissement personnel fulgurant…</em></p>
 <aside class="notes">
 <p><strong>CORENTIN</strong></p>
 <ul>
-<li>Tous les modules ont leur tests associés</li>
+<li>On a eu une démonstration de ce que notre application était capable de faire, mais on a pas vraiment eu le temps de regarder en détail comment nous avions conçu ça. Et pourtant, l’agent Smith nous a confirmé que nore code était de Deutsche Qualitat !</li>
 </ul>
 <style type="text/css">
         span.MJX_Assistive_MathML {
@@ -1266,7 +1268,8 @@ style F stroke:#fff100,stroke-width:3px, fill:white;
 <section id="références" class="slide level2">
 <h2>Références</h2>
 <ul>
-<li>Images : <strong>DALL-E</strong></li>
+<li>Images : <a href="https://openai.com/dall-e-2"><strong>DALL-E</strong></a></li>
+<li>Guide Utilisateur : <a href="https://scikit-learn.org/stable/user_guide.html"><code>scickit-learn</code></a></li>
 </ul>
 
 <img src="https://corentinducloux.fr/dossier_img/mecen_transparent.png" class="slide-logo r-stretch"><div class="footer footer-default">
