Commit Final Final

--- a/quarto/presentation.html
+++ b/quarto/presentation.html
@@ -937,15 +937,16 @@ style F stroke:#fff100,stroke-width:3px, fill:white;
 <li>Modularité</li>
 <li>Docker</li>
 <li>Tests des features de l’application</li>
-<li>Git</li>
-<li>Black</li>
+<li>Git pour versionner notre projet</li>
+<li>Black pour formater notre code</li>
+<li>Un beau <em>README</em></li>
 </ul>
 <p><strong>Code certifié conforme par l’<em>Agent Smith<span class="math inline">\(^*\)</span></em></strong></p>
 <p><span class="math inline">\(^*\)</span> <em>L’Agent Smith tient par ailleurs à préciser qu’il n’a reçu aucun pot-de-vin de notre part pour ce diagnostic malgré son enrichissement personnel fulgurant…</em></p>
 <aside class="notes">
 <p><strong>CORENTIN</strong></p>
 <ul>
-<li>On a eu une démonstration de ce que notre application était capable de faire, mais on a pas vraiment eu le temps de regarder en détail comment nous avions conçu ça. Et pourtant, l’agent Smith nous a confirmé que nore code était de Deutsche Qualitat !</li>
+<li>On a eu une démonstration de ce que notre application était capable de faire, mais on a pas vraiment eu le temps de regarder en détail comment nous avions conçu ça. Et pourtant, l’agent Smith nous a confirmé que notre code était de Deutsche Qualitat !</li>
 </ul>
 <style type="text/css">
         span.MJX_Assistive_MathML {
@@ -1264,12 +1265,25 @@ style F stroke:#fff100,stroke-width:3px, fill:white;
 <blockquote>
 <p>On ne sait pas pourquoi on a fait tout ça, car nous voulions simplement trouver une bouteille pour fêter notre anniversaire, et on se retrouve avec une application d’analyse de données qui ne nous aide en aucun cas à trouver notre breuvage…😵</p>
 </blockquote>
+<aside class="notes">
+<p>Je dirais même pour compléter cette conclusion que la création de cette application : <strong>C’est un petit pas pour l’homme mais un grand pas pour l’humanité.</strong></p>
+<style type="text/css">
+        span.MJX_Assistive_MathML {
+          position:absolute!important;
+          clip: rect(1px, 1px, 1px, 1px);
+          padding: 1px 0 0 0!important;
+          border: 0!important;
+          height: 1px!important;
+          width: 1px!important;
+          overflow: hidden!important;
+          display:block!important;
+      }</style></aside>
 </section>
 <section id="références" class="slide level2">
 <h2>Références</h2>
 <ul>
 <li>Images : <a href="https://openai.com/dall-e-2"><strong>DALL-E</strong></a></li>
-<li>Guide Utilisateur : <a href="https://scikit-learn.org/stable/user_guide.html"><code>scickit-learn</code></a></li>
+<li>Guide Utilisateur : <a href="https://scikit-learn.org/stable/user_guide.html"><code>scikit-learn</code></a></li>
 </ul>
 
 <img src="https://corentinducloux.fr/dossier_img/mecen_transparent.png" class="slide-logo r-stretch"><div class="footer footer-default">
